
- #11245: Merge the common code of ocamlcp and ocamloptp into a single module.
  (David Allsopp, review by Sébastien Hinderer)

- #11382: OCamlmktop use a new initialization module "OCamlmktop_init" to
  preserve backward-compatibility with user-module provided modules that install
  toplevel printers.
  (Florian Angeletti, review by Gabriel Scherer and David Allsopp)

### Manual and documentation:

- #11058: runtime/HACKING.adoc tips on debugging the runtime
  (Gabriel Scherer, review by Enguerrand Decorne and Nicolás Ojeda Bär)

- #11093: Add an effect handlers tutorial
  (KC Sivaramakrishnan, review by François Pottier, Gabriel Scherer, François
  Bobot and Wiktor Kuchta)

- #11192: Better documentation for condition variables.
  (François Pottier, review by Luc Maranget, Xavier Leroy, and Wiktor Kuchta)

### Compiler user-interface and warnings:

- #9140, #11131: New command-line flag -nocwd to not include implicit
  the current directory to the load path.
  (Thomas Roglin, review by Gabriel Scherer and Nicolás Ojeda Bär)

- #11089: Add 'since <version>' information to compiler warnings.
  (André Maroneze, review by Florian Angeletti and Gabriel Scherer)

- #10909: Disable warning 59 (assignment to immutable blocks) unless flambda
  invariant checks are enabled.
  (Vincent Laviron, review by Gabriel Scherer)

- #10981, #11276: Implement a -cmi-file option for ocamlc and ocamlopt.
  (Sébastien Hinderer, review by Damien Doligez, Daniel Bünzli and
  Florian Angeletti)

* #11049: Stop padding 1-digit compiler minor version numbers.
  (So for instance OCaml 5.0 rather than 5.00)
  (Sébastien Hinderer, review by David Allsopp, Florian Angeletti and
  Xavier Leroy)

- #11184: Stop calling ranlib on created / installed libraries
  (Sébastien Hinderer, review by Xavier Leroy)

- #11253: Deprecate `ocaml script` and `ocamlnat` script where `script` has no
  extension and is an implicit basename.
  (David Allsopp, review by Florian Angeletti and Sébastien Hinderer)
