@@ -35,6 +35,7 @@ let bytecode =
 {
   test_name = "bytecode";
   test_run_by_default = true;
+  test_description = "Build bytecode program, run it and check its output";
   test_actions =
   (if Sys.win32 && Ocamltest_config.arch<>"none" then
     opt_build
@@ -82,6 +83,7 @@ let native =
   {
     test_name = "native";
     test_run_by_default = true;
+  test_description = "Build native program, run it and check its output";
     test_actions =
       (if Ocamltest_config.native_compiler then opt_actions else [skip])
   }
@@ -89,6 +91,8 @@ let native =
 let toplevel = {
   test_name = "toplevel";
   test_run_by_default = false;
+  test_description =
+    "Run the program in the OCaml toplevel and check its output";
   test_actions =
   [
     setup_ocaml_build_env;
@@ -100,6 +104,9 @@ let toplevel = {
 let nattoplevel = {
   test_name = "toplevel.opt";
   test_run_by_default = false;
+  test_description =
+    "Run the program in the native OCaml toplevel (ocamlnat) and check its \
+     output";
   test_actions =
   [
     shared_libraries;
@@ -113,6 +120,9 @@ let expect =
 {
   test_name = "expect";
   test_run_by_default = false;
+  test_description =
+    "Run expect tests in the program in the OCaml toplevel and check their \
+     output";
   test_actions =
   [
     setup_simple_build_env;
@@ -125,6 +135,7 @@ let ocamldoc =
 {
   test_name = "ocamldoc";
   test_run_by_default = false;
+  test_description = "Run ocamldoc on the test and compare with the reference";
   test_actions =
   if  Ocamltest_config.ocamldoc then
   [
@@ -160,6 +171,9 @@ let asmgen =
 {
   test_name = "asmgen";
   test_run_by_default = false;
+  test_description =
+    "Generate the assembly for the test program; and also use the C compiler \
+     to make the executable";
   test_actions = asmgen_actions
 }
 
