@@ -389,6 +389,9 @@ OCaml 5.0
   toplevel printers.
   (Florian Angeletti, review by Gabriel Scherer and David Allsopp)
 
+- #11514: Document ocamltest builtin variables and actions
+  (Olivier Nicole, review by Sébastien Hinderer)
+
 ### Manual and documentation:
 
 - #11058: runtime/HACKING.adoc tips on debugging the runtime
